--- a/UnitTestCSS1/www/prototype.html
+++ b/UnitTestCSS1/www/prototype.html
@@ -1,9 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <html>
 	<head>
+		<meta charset="utf-8" />
+		<meta name="format-detection" content="telephone=no" />
+		<meta name="msapplication-tap-highlight" content="no" />
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
 		<link rel="stylesheet" href="css/prototype.css"/>
+		<script type="text/javascript" src="cordova.js"></script>
+		<script type="text/javascript">
+			function onBodyLoad() {
+				document.addEventListener("deviceready", onDeviceReady, false);
+			}
+			function onDeviceReady() {
+				//navigator.notification.alert("Cordova is ready");
+				// app = new BibleApp();
+				// app.something();
+			}
+		</script>
 	</head>
-	<body>
+	<body onload="onBodyLoad()">
 		<main>
 			<article id="EPH">
 				<header><p class="t">The Epistle to the Ephesians</p></header>
