Initial work on appearing footnotes is working.

--- a/BibleAppNW/index.html
+++ b/BibleAppNW/index.html
@@ -11,7 +11,8 @@
 	<script type="text/javascript">
 		function onBodyLoad() {
 			console.log('DEVICE IS READY **');
-			presentBook('WEB/043JHN.usx');
+			//presentBook('WEB/043JHN.usx');
+			presentBook('WEB/001GEN.usx');
 		};
 		function presentBook(filename) {
 			var reader = new NodeFileReader();
