--- a/BibleAppNW/index.html
+++ b/BibleAppNW/index.html
@@ -8,6 +8,8 @@
 		height=device-height, target-densitydpi=device-dpi" />
 	<link rel="stylesheet" href="css/bible.css"/>
 	<script type="text/javascript" src="js/BibleApp.js"></script>
+	<script type="text/javascript" src="js/TweenLite.js"></script>
+	<script type="text/javascript" src="js/plugins/TextPlugin.js"></script>
 	<script type="text/javascript">
 		function onBodyLoad() {
 			console.log('DEVICE IS READY **');
