--- a/BibleAppNW/index.html
+++ b/BibleAppNW/index.html
@@ -14,7 +14,8 @@
 		function onBodyLoad() {
 			console.log('DEVICE IS READY **');
 			//presentBook('WEB/043JHN.usx');
-			presentBook('WEB/001GEN.usx');
+			//presentBook('WEB/001GEN.usx');
+			presentBook('WEB/040MAT.usx');
 		};
 		function presentBook(filename) {
 			var reader = new NodeFileReader();
