Removed note.f, and note.x from styles to be done.

--- a/BibleAppNW/index.html
+++ b/BibleAppNW/index.html
@@ -15,7 +15,8 @@
 			console.log('DEVICE IS READY **');
 			//presentBook('WEB/043JHN.usx');
 			//presentBook('WEB/001GEN.usx');
-			presentBook('WEB/040MAT.usx');
+			//presentBook('WEB/040MAT.usx');
+			presentBook('WEB/004NUM.usx');
 		};
 		function presentBook(filename) {
 			var reader = new NodeFileReader();
