Change dom builder to follow source heirarchy exactly.

--- a/BibleAppNW/index.html
+++ b/BibleAppNW/index.html
@@ -17,6 +17,7 @@
 			//presentBook('WEB/001GEN.usx');
 			//presentBook('WEB/040MAT.usx');
 			presentBook('WEB/004NUM.usx');
+			//presentBook('WEB/049EPH.usx');
 		};
 		function presentBook(filename) {
 			var reader = new NodeFileReader();
