Footnotes and Crossreferences are all working well now.

--- a/BibleAppNW/index.html
+++ b/BibleAppNW/index.html
@@ -13,11 +13,12 @@
 	<script type="text/javascript">
 		function onBodyLoad() {
 			console.log('DEVICE IS READY **');
-			//presentBook('WEB/043JHN.usx');
+			presentBook('WEB/043JHN.usx');
 			//presentBook('WEB/001GEN.usx');
 			//presentBook('WEB/040MAT.usx');
-			presentBook('WEB/004NUM.usx');
+			//presentBook('WEB/004NUM.usx');
 			//presentBook('WEB/049EPH.usx');
+			//presentBook('WEB/042LUK.usx');
 		};
 		function presentBook(filename) {
 			var reader = new NodeFileReader();
