--- a/BibleAppNW/index.html
+++ b/BibleAppNW/index.html
@@ -13,12 +13,15 @@
 	<script type="text/javascript">
 		function onBodyLoad() {
 			console.log('DEVICE IS READY **');
-			presentBook('WEB/043JHN.usx');
+			//presentBook('WEB/043JHN.usx');
 			//presentBook('WEB/001GEN.usx');
 			//presentBook('WEB/040MAT.usx');
 			//presentBook('WEB/004NUM.usx');
 			//presentBook('WEB/049EPH.usx');
 			//presentBook('WEB/042LUK.usx');
+			app = new AppContext(); // Global root of the application
+
+			app.tableContentsGUI.showTocBookList('WEB');
 		};
 		function presentBook(filename) {
 			var reader = new NodeFileReader();
