--- a/UnitTestCSS1/www/html/018JOB.html
+++ b/UnitTestCSS1/www/html/018JOB.html
@@ -19,12 +19,12 @@
 <p class="mt2">The Book of</p>
 <p class="mt">Job</p>
 <p id="1" class="c">1</p>
-<p class="p"><span id="1" class="v">1 </span>There was a man in the land of Uz, whose name was Job. That man was blameless and upright, and one who feared God,<span class="f">+ The Hebrew word rendered “God” is “אֱלֹהִ֑ים” (Elohim).</span> and turned away from evil. <span id="2" class="v">2 </span>There were born to him seven sons and three daughters. <span id="3" class="v">3 </span>His possessions also were seven thousand sheep, three thousand camels, five hundred yoke of oxen, five hundred female donkeys, and a very great household; so that this man was the greatest of all the children of the east. <span id="4" class="v">4 </span>His sons went and held a feast in the house of each one on his birthday; and they sent and called for their three sisters to eat and to drink with them. <span id="5" class="v">5 </span>It was so, when the days of their feasting had run their course, that Job sent and sanctified them, and rose up early in the morning, and offered burnt offerings according to the number of them all. For Job said, “It may be that my sons have sinned, and renounced God in their hearts.” Job did so continually.</p>
-<p class="p"><span id="6" class="v">6 </span>Now on the day when God’s sons came to present themselves before Yahweh,<span class="f">+ “Yahweh” is God’s proper Name, sometimes rendered “LORD” (all caps) in other translations.</span> Satan also came among them. <span id="7" class="v">7 </span>Yahweh said to Satan, “Where have you come from?”</p>
+<p class="p"><span id="1" class="v">1 </span>There was a man in the land of Uz, whose name was Job. That man was blameless and upright, and one who feared God,<span class="f">+</span> and turned away from evil. <span id="2" class="v">2 </span>There were born to him seven sons and three daughters. <span id="3" class="v">3 </span>His possessions also were seven thousand sheep, three thousand camels, five hundred yoke of oxen, five hundred female donkeys, and a very great household; so that this man was the greatest of all the children of the east. <span id="4" class="v">4 </span>His sons went and held a feast in the house of each one on his birthday; and they sent and called for their three sisters to eat and to drink with them. <span id="5" class="v">5 </span>It was so, when the days of their feasting had run their course, that Job sent and sanctified them, and rose up early in the morning, and offered burnt offerings according to the number of them all. For Job said, “It may be that my sons have sinned, and renounced God in their hearts.” Job did so continually.</p>
+<p class="p"><span id="6" class="v">6 </span>Now on the day when God’s sons came to present themselves before Yahweh,<span class="f">+</span> Satan also came among them. <span id="7" class="v">7 </span>Yahweh said to Satan, “Where have you come from?”</p>
 <p class="p">Then Satan answered Yahweh, and said, “From going back and forth in the earth, and from walking up and down in it.”</p>
 <p class="p"><span id="8" class="v">8 </span>Yahweh said to Satan, “Have you considered my servant, Job? For there is no one like him in the earth, a blameless and an upright man, one who fears God, and turns away from evil.”</p>
 <p class="p"><span id="9" class="v">9 </span>Then Satan answered Yahweh, and said, “Does Job fear God for nothing? <span id="10" class="v">10 </span>Haven’t you made a hedge around him, and around his house, and around all that he has, on every side? You have blessed the work of his hands, and his substance is increased in the land. <span id="11" class="v">11 </span>But stretch out your hand now, and touch all that he has, and he will renounce you to your face.”</p>
-<p class="p"><span id="12" class="v">12 </span>Yahweh said to Satan, “Behold,<span class="f">+ “Behold”, from “הִנֵּה”, means look at, take notice, observe, see, or gaze at. It is often used as an interjection.</span> all that he has is in your power. Only on himself don’t stretch out your hand.”</p>
+<p class="p"><span id="12" class="v">12 </span>Yahweh said to Satan, “Behold,<span class="f">+</span> all that he has is in your power. Only on himself don’t stretch out your hand.”</p>
 <p class="p">So Satan went out from the presence of Yahweh.
     <span id="13" class="v">13 </span>It fell on a day when his sons and his daughters were eating and drinking wine in their oldest brother’s house, <span id="14" class="v">14 </span>that there came a messenger to Job, and said, “The oxen were plowing, and the donkeys feeding beside them, <span id="15" class="v">15 </span>and the Sabeans attacked, and took them away. Yes, they have killed the servants with the edge of the sword, and I alone have escaped to tell you.”</p>
 <p class="p"><span id="16" class="v">16 </span>While he was still speaking, there also came another, and said, “The fire of God has fallen from the sky, and has burned up the sheep and the servants, and consumed them, and I alone have escaped to tell you.”</p>
@@ -199,7 +199,7 @@
 <p class="q2">The animals of the field shall be at peace with you.</p>
 <p class="q"><span id="24" class="v">24 </span>You shall know that your tent is in peace.</p>
 <p class="q2">You shall visit your fold, and shall miss nothing.</p>
-<p class="q"><span id="25" class="v">25 </span>You shall know also that your offspring<span class="f">+ or, seed</span> shall be great,</p>
+<p class="q"><span id="25" class="v">25 </span>You shall know also that your offspring<span class="f">+</span> shall be great,</p>
 <p class="q2">Your offspring as the grass of the earth.</p>
 <p class="q"><span id="26" class="v">26 </span>You shall come to your grave in a full age,</p>
 <p class="q2">like a shock of grain comes in its season.</p>
@@ -293,7 +293,7 @@
 <p class="q"><span id="8" class="v">8 </span>The eye of him who sees me shall see me no more.</p>
 <p class="q2">Your eyes shall be on me, but I shall not be.</p>
 <p class="q"><span id="9" class="v">9 </span>As the cloud is consumed and vanishes away,</p>
-<p class="q2">so he who goes down to Sheol<span class="f">+ Sheol is the place of the dead.</span> shall come up no more.</p>
+<p class="q2">so he who goes down to Sheol<span class="f">+</span> shall come up no more.</p>
 <p class="q"><span id="10" class="v">10 </span>He shall return no more to his house,</p>
 <p class="q2">neither shall his place know him any more.</p>
 <p class="b"></p>
@@ -521,7 +521,7 @@
 <p class="q"><span id="7" class="v">7 </span>“Can you fathom the mystery of God?</p>
 <p class="q2">Or can you probe the limits of the Almighty?</p>
 <p class="q"><span id="8" class="v">8 </span>They are high as heaven. What can you do?</p>
-<p class="q2">They are deeper than Sheol.<span class="f">+ Sheol is the place of the dead.</span> What can you know?</p>
+<p class="q2">They are deeper than Sheol.<span class="f">+</span> What can you know?</p>
 <p class="q"><span id="9" class="v">9 </span>Its measure is longer than the earth,</p>
 <p class="q2">and broader than the sea.</p>
 <p class="q"><span id="10" class="v">10 </span>If he passes by, or confines,</p>
@@ -699,7 +699,7 @@
 <p class="q2">Until the heavens are no more, they shall not awake,</p>
 <p class="q2">nor be roused out of their sleep.</p>
 <p class="b"></p>
-<p class="q"><span id="13" class="v">13 </span>“Oh that you would hide me in Sheol,<span class="f">+ Sheol is the place of the dead.</span></p>
+<p class="q"><span id="13" class="v">13 </span>“Oh that you would hide me in Sheol,<span class="f">+</span></p>
 <p class="q2">that you would keep me secret, until your wrath is past,</p>
 <p class="q2">that you would appoint me a set time, and remember me!</p>
 <p class="q"><span id="14" class="v">14 </span>If a man dies, shall he live again?</p>
@@ -881,13 +881,13 @@
 <p class="q2">as are the thoughts of my heart.</p>
 <p class="q"><span id="12" class="v">12 </span>They change the night into day,</p>
 <p class="q2">saying ‘The light is near’ in the presence of darkness.</p>
-<p class="q"><span id="13" class="v">13 </span>If I look for Sheol<span class="f">+ Sheol is the place of the dead.</span> as my house,</p>
+<p class="q"><span id="13" class="v">13 </span>If I look for Sheol<span class="f">+</span> as my house,</p>
 <p class="q2">if I have spread my couch in the darkness,</p>
 <p class="q"><span id="14" class="v">14 </span>If I have said to corruption, ‘You are my father;’</p>
 <p class="q2">to the worm, ‘My mother,’ and ‘my sister;’</p>
 <p class="q"><span id="15" class="v">15 </span>where then is my hope?</p>
 <p class="q2">as for my hope, who shall see it?</p>
-<p class="q"><span id="16" class="v">16 </span>Shall it go down with me to the gates of Sheol,<span class="f">+ Sheol is the place of the dead.</span></p>
+<p class="q"><span id="16" class="v">16 </span>Shall it go down with me to the gates of Sheol,<span class="f">+</span></p>
 <p class="q2">or descend together into the dust?”</p>
 <p class="b"></p>
 <p id="18" class="c">18</p>
@@ -1088,7 +1088,7 @@
 <p class="q"><span id="12" class="v">12 </span>They sing to the tambourine and harp,</p>
 <p class="q2">and rejoice at the sound of the pipe.</p>
 <p class="q"><span id="13" class="v">13 </span>They spend their days in prosperity.</p>
-<p class="q2">In an instant they go down to Sheol.<span class="f">+ Sheol is the place of the dead.</span></p>
+<p class="q2">In an instant they go down to Sheol.<span class="f">+</span></p>
 <p class="q"><span id="14" class="v">14 </span>They tell God, ‘Depart from us,</p>
 <p class="q2">for we don’t want to know about your ways.</p>
 <p class="q"><span id="15" class="v">15 </span>What is the Almighty, that we should serve him?</p>
@@ -1283,7 +1283,7 @@
 <p class="q2">Their portion is cursed in the earth.</p>
 <p class="q2">They don’t turn into the way of the vineyards.</p>
 <p class="q"><span id="19" class="v">19 </span>Drought and heat consume the snow waters,</p>
-<p class="q2">so does Sheol<span class="f">+ Sheol is the place of the dead.</span> those who have sinned.</p>
+<p class="q2">so does Sheol<span class="f">+</span> those who have sinned.</p>
 <p class="q"><span id="20" class="v">20 </span>The womb shall forget him.</p>
 <p class="q2">The worm shall feed sweetly on him.</p>
 <p class="q2">He shall be no more remembered.</p>
@@ -1323,8 +1323,8 @@
 <p class="b"></p>
 <p class="q"><span id="5" class="v">5 </span>“The departed spirits tremble,</p>
 <p class="q2">those beneath the waters and all that live in them.</p>
-<p class="q"><span id="6" class="v">6 </span>Sheol<span class="f">+ Sheol is the lower world or the grave.</span> is naked before God,</p>
-<p class="q2">and Abaddon<span class="f">+ Abaddon means Destroyer.</span> has no covering.</p>
+<p class="q"><span id="6" class="v">6 </span>Sheol<span class="f">+</span> is naked before God,</p>
+<p class="q2">and Abaddon<span class="f">+</span> has no covering.</p>
 <p class="q"><span id="7" class="v">7 </span>He stretches out the north over empty space,</p>
 <p class="q2">and hangs the earth on nothing.</p>
 <p class="q"><span id="8" class="v">8 </span>He binds up the waters in his thick clouds,</p>
@@ -1426,7 +1426,7 @@
 <p class="q"><span id="15" class="v">15 </span>It can’t be gotten for gold,</p>
 <p class="q2">neither shall silver be weighed for its price.</p>
 <p class="q"><span id="16" class="v">16 </span>It can’t be valued with the gold of Ophir,</p>
-<p class="q2">with the precious onyx, or the sapphire.<span class="f">+ or, lapis lazuli</span></p>
+<p class="q2">with the precious onyx, or the sapphire.<span class="f">+</span></p>
 <p class="q"><span id="17" class="v">17 </span>Gold and glass can’t equal it,</p>
 <p class="q2">neither shall it be exchanged for jewels of fine gold.</p>
 <p class="q"><span id="18" class="v">18 </span>No mention shall be made of coral or of crystal.</p>
@@ -1451,7 +1451,7 @@
 <p class="q"><span id="27" class="v">27 </span>then he saw it, and declared it.</p>
 <p class="q2">He established it, yes, and searched it out.</p>
 <p class="q"><span id="28" class="v">28 </span>To man he said,</p>
-<p class="q2">‘Behold, the fear of the Lord,<span class="f">+ The word translated “Lord” is “Adonai.”</span>  that is wisdom.</p>
+<p class="q2">‘Behold, the fear of the Lord,<span class="f">+</span>  that is wisdom.</p>
 <p class="q2">To depart from evil is understanding.’”</p>
 <p class="b"></p>
 <p id="29" class="c">29</p>
@@ -2256,7 +2256,7 @@
 <p class="b"></p>
 <p id="41" class="c">41</p>
 <p class="b"></p>
-<p class="q"><span id="1" class="v">1 </span>“Can you draw out Leviathan<span class="f">+ Leviathan is a name for a crocodile or similar creature.</span> with a fish hook,</p>
+<p class="q"><span id="1" class="v">1 </span>“Can you draw out Leviathan<span class="f">+</span> with a fish hook,</p>
 <p class="q2">or press down his tongue with a cord?</p>
 <p class="q"><span id="2" class="v">2 </span>Can you put a rope into his nose,</p>
 <p class="q2">or pierce his jaw through with a hook?</p>
@@ -2345,6 +2345,6 @@
 <p class="b"></p>
 <p class="p"><span id="7" class="v">7 </span>It was so, that after Yahweh had spoken these words to Job, Yahweh said to Eliphaz the Temanite, “My wrath is kindled against you, and against your two friends; for you have not spoken of me the thing that is right, as my servant Job has. <span id="8" class="v">8 </span>Now therefore, take to yourselves seven bulls and seven rams, and go to my servant Job, and offer up for yourselves a burnt offering; and my servant Job shall pray for you, for I will accept him, that I not deal with you according to your folly. For you have not spoken of me the thing that is right, as my servant Job has.”</p>
 <p class="p"><span id="9" class="v">9 </span>So Eliphaz the Temanite and Bildad the Shuhite and Zophar the Naamathite went, and did what Yahweh commanded them, and Yahweh accepted Job.</p>
-<p class="p"><span id="10" class="v">10 </span>Yahweh turned the captivity of Job, when he prayed for his friends. Yahweh gave Job twice as much as he had before. <span id="11" class="v">11 </span>Then came there to him all his brothers, and all his sisters, and all those who had been of his acquaintance before, and ate bread with him in his house. They comforted him, and consoled him concerning all the evil that Yahweh had brought on him. Everyone also gave him a piece of money,<span class="f">+ literally, kesitah, a unit of money, probably silver</span> and everyone a ring of gold.</p>
+<p class="p"><span id="10" class="v">10 </span>Yahweh turned the captivity of Job, when he prayed for his friends. Yahweh gave Job twice as much as he had before. <span id="11" class="v">11 </span>Then came there to him all his brothers, and all his sisters, and all those who had been of his acquaintance before, and ate bread with him in his house. They comforted him, and consoled him concerning all the evil that Yahweh had brought on him. Everyone also gave him a piece of money,<span class="f">+</span> and everyone a ring of gold.</p>
 <p class="p"><span id="12" class="v">12 </span>So Yahweh blessed the latter end of Job more than his beginning. He had fourteen thousand sheep, six thousand camels, one thousand yoke of oxen, and a thousand female donkeys. <span id="13" class="v">13 </span>He had also seven sons and three daughters. <span id="14" class="v">14 </span>He called the name of the first, Jemimah; and the name of the second, Keziah; and the name of the third, Keren Happuch. <span id="15" class="v">15 </span>In all the land were no women found so beautiful as the daughters of Job. Their father gave them an inheritance among their brothers. <span id="16" class="v">16 </span>After this Job lived one hundred forty years, and saw his sons, and his sons’ sons, to four generations. <span id="17" class="v">17 </span>So Job died, being old and full of days.</p>
 </body></html>
