--- a/UnitTestCSS1/www/html/022SNG.html
+++ b/UnitTestCSS1/www/html/022SNG.html
@@ -66,7 +66,7 @@
 <p class="q"><span id="14" class="v">14 </span>My beloved is to me a cluster of henna blossoms</p>
 <p class="q2">from the vineyards of En Gedi.</p>
 <p class="sp">Lover</p>
-<p class="q"><span id="15" class="v">15 </span>Behold,<span class="f">+ “Behold”, from “הִנֵּה”, means look at, take notice, observe, see, or gaze at. It is often used as an interjection.</span> you are beautiful, my love.</p>
+<p class="q"><span id="15" class="v">15 </span>Behold,<span class="f">+</span> you are beautiful, my love.</p>
 <p class="q2">Behold, you are beautiful.</p>
 <p class="q2">Your eyes are doves.</p>
 <p class="sp">Beloved</p>
@@ -402,9 +402,9 @@
 <p class="q"><span id="6" class="v">6 </span>Set me as a seal on your heart,</p>
 <p class="q2">as a seal on your arm;</p>
 <p class="q2">for love is strong as death.</p>
-<p class="q2">Jealousy is as cruel as Sheol.<span class="f">+ Sheol is the place of the dead.</span></p>
+<p class="q2">Jealousy is as cruel as Sheol.<span class="f">+</span></p>
 <p class="q2">Its flashes are flashes of fire,</p>
-<p class="q2">a very flame of Yahweh.<span class="f">+ “Yahweh” is God’s proper Name, sometimes rendered “LORD” (all caps) in other translations.</span></p>
+<p class="q2">a very flame of Yahweh.<span class="f">+</span></p>
 <p class="q"><span id="7" class="v">7 </span>Many waters can’t quench love,</p>
 <p class="q2">neither can floods drown it.</p>
 <p class="q">If a man would give all the wealth of his house for love,</p>
@@ -424,7 +424,7 @@
 <p class="q2">then I was in his eyes like one who found peace.</p>
 <p class="q"><span id="11" class="v">11 </span>Solomon had a vineyard at Baal Hamon.</p>
 <p class="q2">He leased out the vineyard to keepers.</p>
-<p class="q2">Each was to bring a thousand shekels<span class="f">+ A shekel is about 10 grams or about 0.35 ounces, so 1000 shekels is about 10 kilograms or about 22 pounds.</span> of silver for its fruit.</p>
+<p class="q2">Each was to bring a thousand shekels<span class="f">+</span> of silver for its fruit.</p>
 <p class="q"><span id="12" class="v">12 </span>My own vineyard is before me.</p>
 <p class="q2">The thousand are for you, Solomon;</p>
 <p class="q2">two hundred for those who tend its fruit.</p>
