--- a/UnitTestCSS1/www/html/030AMO.html
+++ b/UnitTestCSS1/www/html/030AMO.html
@@ -20,7 +20,7 @@
 <p class="mt">Amos</p>
 <p id="1" class="c">1</p>
 <p class="p"><span id="1" class="v">1 </span>The words of Amos, who was among the herdsmen of Tekoa, which he saw concerning Israel in the days of Uzziah king of Judah, and in the days of Jeroboam the son of Joash king of Israel, two years before the earthquake. <span id="2" class="v">2 </span>He said:</p>
-<p class="q">“Yahweh<span class="f">+ “Yahweh” is God’s proper Name, sometimes rendered “LORD” (all caps) in other translations.</span> will roar from Zion,</p>
+<p class="q">“Yahweh<span class="f">+</span> will roar from Zion,</p>
 <p class="q2">and utter his voice from Jerusalem;</p>
 <p class="q">and the pastures of the shepherds will mourn,</p>
 <p class="q2">and the top of Carmel will wither.”</p>
@@ -46,7 +46,7 @@
 <p class="q2">and him who holds the scepter from Ashkelon;</p>
 <p class="q">and I will turn my hand against Ekron;</p>
 <p class="q2">and the remnant of the Philistines will perish,”</p>
-<p class="p">says the Lord<span class="f">+ The word translated “Lord” is “Adonai.”</span> Yahweh.</p>
+<p class="p">says the Lord<span class="f">+</span> Yahweh.</p>
 <p class="p"><span id="9" class="v">9 </span>Yahweh says:</p>
 <p class="q">“For three transgressions of Tyre, yes, for four,</p>
 <p class="q2">I will not turn away its punishment;</p>
@@ -104,7 +104,7 @@
 <p class="q2">and deny justice to the oppressed;</p>
 <p class="q2">and a man and his father use the same maiden, to profane my holy name;</p>
 <p class="q2"><span id="8" class="v">8 </span>and they lay themselves down beside every altar on clothes taken in pledge;</p>
-<p class="q2">and in the house of their God<span class="f">+ The Hebrew word rendered “God” is “אֱלֹהִ֑ים” (Elohim).</span> they drink the wine of those who have been fined.</p>
+<p class="q2">and in the house of their God<span class="f">+</span> they drink the wine of those who have been fined.</p>
 <p class="q"><span id="9" class="v">9 </span>Yet I destroyed the Amorite before them,</p>
 <p class="q2">whose height was like the height of the cedars,</p>
 <p class="q2">and he was strong as the oaks;</p>
@@ -119,7 +119,7 @@
 <p class="q2">you children of Israel?” says Yahweh.</p>
 <p class="q"><span id="12" class="v">12 </span>“But you gave the Nazirites wine to drink,</p>
 <p class="q2">and commanded the prophets, saying, ‘Don’t prophesy!’</p>
-<p class="q"><span id="13" class="v">13 </span>Behold,<span class="f">+ “Behold”, from “הִנֵּה”, means look at, take notice, observe, see, or gaze at. It is often used as an interjection.</span> I will crush you in your place,</p>
+<p class="q"><span id="13" class="v">13 </span>Behold,<span class="f">+</span> I will crush you in your place,</p>
 <p class="q2">as a cart crushes that is full of grain.</p>
 <p class="q"><span id="14" class="v">14 </span>Flight will perish from the swift;</p>
 <p class="q2">and the strong won’t strengthen his force;</p>
@@ -370,7 +370,7 @@
 <p class="q2">and cause the poor of the land to fail,</p>
 <p class="q2"><span id="5" class="v">5 </span>Saying, ‘When will the new moon be gone, that we may sell grain?</p>
 <p class="q2">And the Sabbath, that we may market wheat,</p>
-<p class="q2">making the ephah<span class="f">+ 1 ephah is about 22 liters or about 2/3 of a bushel</span>  small, and the shekel<span class="f">+ a normal shekel is about 10 grams or about 0.35 ounces.</span> large,</p>
+<p class="q2">making the ephah<span class="f">+</span>  small, and the shekel<span class="f">+</span> large,</p>
 <p class="q2">and dealing falsely with balances of deceit;</p>
 <p class="q"><span id="6" class="v">6 </span>that we may buy the poor for silver,</p>
 <p class="q2">and the needy for a pair of shoes,</p>
@@ -406,7 +406,7 @@
 <p class="q2">and, ‘As the way of Beersheba lives;’</p>
 <p class="q2">they will fall, and never rise up again.”</p>
 <p id="9" class="c">9</p>
-<p class="p"><span id="1" class="v">1 </span>I saw the Lord standing beside the altar, and he said, “Strike the tops of the pillars, that the thresholds may shake; and break them in pieces on the head of all of them; and I will kill the last of them with the sword: there shall not one of them flee away, and there shall not one of them escape. <span id="2" class="v">2 </span>Though they dig into Sheol,<span class="f">+ Sheol is the place of the dead.</span> there my hand will take them; and though they climb up to heaven, there I will bring them down. <span id="3" class="v">3 </span>Though they hide themselves in the top of Carmel, I will search and take them out there; and though they be hidden from my sight in the bottom of the sea, there I will command the serpent, and it will bite them. <span id="4" class="v">4 </span>Though they go into captivity before their enemies, there I will command the sword, and it will kill them. I will set my eyes on them for evil, and not for good. <span id="5" class="v">5 </span>For the Lord, Yahweh of Armies, is he who touches the land and it melts, and all who dwell in it will mourn; and it will rise up wholly like the River, and will sink again, like the River of Egypt. <span id="6" class="v">6 </span>It is he who builds his rooms in the heavens, and has founded his vault on the earth; he who calls for the waters of the sea, and pours them out on the surface of the earth; Yahweh is his name. <span id="7" class="v">7 </span>Are you not like the children of the Ethiopians to me, children of Israel?” says Yahweh. “Haven’t I brought up Israel out of the land of Egypt, and the Philistines from Caphtor, and the Syrians from Kir? <span id="8" class="v">8 </span>Behold, the eyes of the Lord Yahweh are on the sinful kingdom, and I will destroy it from off the surface of the earth; except that I will not utterly destroy the house of Jacob,” says Yahweh. <span id="9" class="v">9 </span>“For, behold, I will command, and I will sift the house of Israel among all the nations, as grain is sifted in a sieve, yet not the least kernel will fall on the earth. <span id="10" class="v">10 </span>All the sinners of my people will die by the sword, who say, ‘Evil won’t overtake nor meet us.’ <span id="11" class="v">11 </span>In that day I will raise up the tent of David who is fallen, and close up its breaches, and I will raise up its ruins, and I will build it as in the days of old; <span id="12" class="v">12 </span>that they may possess the remnant of Edom, and all the nations who are called by my name,” says Yahweh who does this.</p>
+<p class="p"><span id="1" class="v">1 </span>I saw the Lord standing beside the altar, and he said, “Strike the tops of the pillars, that the thresholds may shake; and break them in pieces on the head of all of them; and I will kill the last of them with the sword: there shall not one of them flee away, and there shall not one of them escape. <span id="2" class="v">2 </span>Though they dig into Sheol,<span class="f">+</span> there my hand will take them; and though they climb up to heaven, there I will bring them down. <span id="3" class="v">3 </span>Though they hide themselves in the top of Carmel, I will search and take them out there; and though they be hidden from my sight in the bottom of the sea, there I will command the serpent, and it will bite them. <span id="4" class="v">4 </span>Though they go into captivity before their enemies, there I will command the sword, and it will kill them. I will set my eyes on them for evil, and not for good. <span id="5" class="v">5 </span>For the Lord, Yahweh of Armies, is he who touches the land and it melts, and all who dwell in it will mourn; and it will rise up wholly like the River, and will sink again, like the River of Egypt. <span id="6" class="v">6 </span>It is he who builds his rooms in the heavens, and has founded his vault on the earth; he who calls for the waters of the sea, and pours them out on the surface of the earth; Yahweh is his name. <span id="7" class="v">7 </span>Are you not like the children of the Ethiopians to me, children of Israel?” says Yahweh. “Haven’t I brought up Israel out of the land of Egypt, and the Philistines from Caphtor, and the Syrians from Kir? <span id="8" class="v">8 </span>Behold, the eyes of the Lord Yahweh are on the sinful kingdom, and I will destroy it from off the surface of the earth; except that I will not utterly destroy the house of Jacob,” says Yahweh. <span id="9" class="v">9 </span>“For, behold, I will command, and I will sift the house of Israel among all the nations, as grain is sifted in a sieve, yet not the least kernel will fall on the earth. <span id="10" class="v">10 </span>All the sinners of my people will die by the sword, who say, ‘Evil won’t overtake nor meet us.’ <span id="11" class="v">11 </span>In that day I will raise up the tent of David who is fallen, and close up its breaches, and I will raise up its ruins, and I will build it as in the days of old; <span id="12" class="v">12 </span>that they may possess the remnant of Edom, and all the nations who are called by my name,” says Yahweh who does this.</p>
 <p class="q"><span id="13" class="v">13 </span>“Behold, the days come,” says Yahweh,</p>
 <p class="q2">“that the plowman shall overtake the reaper,</p>
 <p class="q2">and the one treading grapes him who sows seed;</p>
