--- a/UnitTestCSS1/www/html/033MIC.html
+++ b/UnitTestCSS1/www/html/033MIC.html
@@ -19,12 +19,12 @@
 <p class="mt2">The Book of</p>
 <p class="mt">Micah</p>
 <p id="1" class="c">1</p>
-<p class="p"><span id="1" class="v">1 </span>Yahweh’s<span class="f">+ “Yahweh” is God’s proper Name, sometimes rendered “LORD” (all caps) in other translations.</span> word that came to Micah the Morashtite in the days of Jotham, Ahaz, and Hezekiah, kings of Judah, which he saw concerning Samaria and Jerusalem.</p>
+<p class="p"><span id="1" class="v">1 </span>Yahweh’s<span class="f">+</span> word that came to Micah the Morashtite in the days of Jotham, Ahaz, and Hezekiah, kings of Judah, which he saw concerning Samaria and Jerusalem.</p>
 <p class="q"><span id="2" class="v">2 </span>Hear, you peoples, all of you.</p>
 <p class="q2">Listen, O earth, and all that is therein:</p>
-<p class="q">and let the Lord<span class="f">+ The word translated “Lord” is “Adonai.”</span> Yahweh be witness against you,</p>
+<p class="q">and let the Lord<span class="f">+</span> Yahweh be witness against you,</p>
 <p class="q2">the Lord from his holy temple.</p>
-<p class="q"><span id="3" class="v">3 </span>For, behold,<span class="f">+ “Behold”, from “הִנֵּה”, means look at, take notice, observe, see, or gaze at. It is often used as an interjection.</span> Yahweh comes out of his place,</p>
+<p class="q"><span id="3" class="v">3 </span>For, behold,<span class="f">+</span> Yahweh comes out of his place,</p>
 <p class="q2">and will come down and tread on the high places of the earth.</p>
 <p class="q"><span id="4" class="v">4 </span>The mountains melt under him,</p>
 <p class="q2">and the valleys split apart,</p>
@@ -57,7 +57,7 @@
 <p class="q2">even to Jerusalem.</p>
 <p class="q"><span id="10" class="v">10 </span>Don’t tell it in Gath.</p>
 <p class="q2">Don’t weep at all.</p>
-<p class="q2">At Beth Ophrah<span class="f">+ Beth Ophrah means literally “House of Dust.”</span> I have rolled myself in the dust.</p>
+<p class="q2">At Beth Ophrah<span class="f">+</span> I have rolled myself in the dust.</p>
 <p class="q"><span id="11" class="v">11 </span>Pass on, inhabitant of Shaphir, in nakedness and shame.</p>
 <p class="q2">The inhabitant of Zaanan won’t come out.</p>
 <p class="q2">The wailing of Beth Ezel will take from you his protection.</p>
@@ -149,7 +149,7 @@
 <p class="q"><span id="7" class="v">7 </span>The seers shall be disappointed,</p>
 <p class="q2">and the diviners confounded.</p>
 <p class="q">Yes, they shall all cover their lips;</p>
-<p class="q2">for there is no answer from God.”<span class="f">+ The Hebrew word rendered “God” is “אֱלֹהִ֑ים” (Elohim).</span></p>
+<p class="q2">for there is no answer from God.”<span class="f">+</span></p>
 <p class="q"><span id="8" class="v">8 </span>But as for me, I am full of power by Yahweh’s Spirit,</p>
 <p class="q2">and of judgment, and of might,</p>
 <p class="q2">to declare to Jacob his disobedience,</p>
@@ -312,7 +312,7 @@
 <p class="q">“Listen to the rod,</p>
 <p class="q2">and he who appointed it.</p>
 <p class="q"><span id="10" class="v">10 </span>Are there yet treasures of wickedness in the house of the wicked,</p>
-<p class="q2">and a short ephah<span class="f">+ An ephah is a measure of volume (about 22 liters or about 2/3 of a bushel), and a short ephah is made smaller than a full ephah for the purpose of cheating customers.</span> that is accursed?</p>
+<p class="q2">and a short ephah<span class="f">+</span> that is accursed?</p>
 <p class="q"><span id="11" class="v">11 </span>Shall I be pure with dishonest scales,</p>
 <p class="q2">and with a bag of deceitful weights?</p>
 <p class="q"><span id="12" class="v">12 </span>Her rich men are full of violence,</p>
