--- a/UnitTestCSS1/www/html/020PRO.html
+++ b/UnitTestCSS1/www/html/020PRO.html
@@ -30,7 +30,7 @@
 <p class="q"><span id="6" class="v">6 </span>to understand a proverb, and parables,</p>
 <p class="q2">the words and riddles of the wise.</p>
 <p class="b"></p>
-<p class="q"><span id="7" class="v">7 </span>The fear of Yahweh<span class="f">+ “Yahweh” is God’s proper Name, sometimes rendered “LORD” (all caps) in other translations.</span> is the beginning of knowledge;</p>
+<p class="q"><span id="7" class="v">7 </span>The fear of Yahweh<span class="f">+</span> is the beginning of knowledge;</p>
 <p class="q2">but the foolish despise wisdom and instruction.</p>
 <p class="q"><span id="8" class="v">8 </span>My son, listen to your father’s instruction,</p>
 <p class="q2">and don’t forsake your mother’s teaching:</p>
@@ -41,7 +41,7 @@
 <p class="q"><span id="11" class="v">11 </span>If they say, “Come with us.</p>
 <p class="q2">Let’s lay in wait for blood.</p>
 <p class="q2">Let’s lurk secretly for the innocent without cause.</p>
-<p class="q"><span id="12" class="v">12 </span>Let’s swallow them up alive like Sheol,<span class="f">+ Sheol is the place of the dead.</span></p>
+<p class="q"><span id="12" class="v">12 </span>Let’s swallow them up alive like Sheol,<span class="f">+</span></p>
 <p class="q2">and whole, like those who go down into the pit.</p>
 <p class="q"><span id="13" class="v">13 </span>We’ll find all valuable wealth.</p>
 <p class="q2">We’ll fill our houses with plunder.</p>
@@ -65,7 +65,7 @@
 <p class="q2">How long will mockers delight themselves in mockery,</p>
 <p class="q2">and fools hate knowledge?</p>
 <p class="q"><span id="23" class="v">23 </span>Turn at my reproof.</p>
-<p class="q2">Behold,<span class="f">+ “Behold”, from “הִנֵּה”, means look at, take notice, observe, see, or gaze at. It is often used as an interjection.</span> I will pour out my spirit on you.</p>
+<p class="q2">Behold,<span class="f">+</span> I will pour out my spirit on you.</p>
 <p class="q2">I will make known my words to you.</p>
 <p class="q"><span id="24" class="v">24 </span>Because I have called, and you have refused;</p>
 <p class="q2">I have stretched out my hand, and no one has paid attention;</p>
@@ -98,7 +98,7 @@
 <p class="q"><span id="4" class="v">4 </span>If you seek her as silver,</p>
 <p class="q2">and search for her as for hidden treasures:</p>
 <p class="q"><span id="5" class="v">5 </span>then you will understand the fear of Yahweh,</p>
-<p class="q2">and find the knowledge of God.<span class="f">+ The Hebrew word rendered “God” is “אֱלֹהִ֑ים” (Elohim).</span></p>
+<p class="q2">and find the knowledge of God.<span class="f">+</span></p>
 <p class="q"><span id="6" class="v">6 </span>For Yahweh gives wisdom.</p>
 <p class="q2">Out of his mouth comes knowledge and understanding.</p>
 <p class="q"><span id="7" class="v">7 </span>He lays up sound wisdom for the upright.</p>
@@ -279,7 +279,7 @@
 <p class="q"><span id="4" class="v">4 </span>but in the end she is as bitter as wormwood,</p>
 <p class="q2">and as sharp as a two-edged sword.</p>
 <p class="q"><span id="5" class="v">5 </span>Her feet go down to death.</p>
-<p class="q2">Her steps lead straight to Sheol.<span class="f">+ Sheol is the place of the dead.</span></p>
+<p class="q2">Her steps lead straight to Sheol.<span class="f">+</span></p>
 <p class="q"><span id="6" class="v">6 </span>She gives no thought to the way of life.</p>
 <p class="q2">Her ways are crooked, and she doesn’t know it.</p>
 <p class="b"></p>
@@ -454,7 +454,7 @@
 <p class="q2">Don’t go astray in her paths,</p>
 <p class="q"><span id="26" class="v">26 </span>for she has thrown down many wounded.</p>
 <p class="q2">Yes, all her slain are a mighty army.</p>
-<p class="q"><span id="27" class="v">27 </span>Her house is the way to Sheol,<span class="f">+ Sheol is the place of the dead.</span></p>
+<p class="q"><span id="27" class="v">27 </span>Her house is the way to Sheol,<span class="f">+</span></p>
 <p class="q2">going down to the rooms of death.</p>
 <p id="8" class="c">8</p>
 <p class="q"><span id="1" class="v">1 </span>Doesn’t wisdom cry out?</p>
@@ -574,7 +574,7 @@
 <p class="q"><span id="17" class="v">17 </span>“Stolen water is sweet.</p>
 <p class="q2">Food eaten in secret is pleasant.”</p>
 <p class="q"><span id="18" class="v">18 </span>But he doesn’t know that the departed spirits are there,</p>
-<p class="q2">that her guests are in the depths of Sheol.<span class="f">+ Sheol is the place of the dead.</span></p>
+<p class="q2">that her guests are in the depths of Sheol.<span class="f">+</span></p>
 <p id="10" class="c">10</p>
 <p class="p"><span id="1" class="v">1 </span>The proverbs of Solomon.</p>
 <p class="q">A wise son makes a glad father;</p>
@@ -683,7 +683,7 @@
 <p class="q"><span id="20" class="v">20 </span>Those who are perverse in heart are an abomination to Yahweh,</p>
 <p class="q2">but those whose ways are blameless are his delight.</p>
 <p class="q"><span id="21" class="v">21 </span>Most certainly, the evil man will not be unpunished,</p>
-<p class="q2">but the offspring<span class="f">+ or, seed</span> of the righteous will be delivered.</p>
+<p class="q2">but the offspring<span class="f">+</span> of the righteous will be delivered.</p>
 <p class="q"><span id="22" class="v">22 </span>Like a gold ring in a pig’s snout,</p>
 <p class="q2">is a beautiful woman who lacks discretion.</p>
 <p class="q"><span id="23" class="v">23 </span>The desire of the righteous is only good.</p>
@@ -904,7 +904,7 @@
 <p class="q2">but he loves him who follows after righteousness.</p>
 <p class="q"><span id="10" class="v">10 </span>There is stern discipline for one who forsakes the way:</p>
 <p class="q2">whoever hates reproof shall die.</p>
-<p class="q"><span id="11" class="v">11 </span>Sheol<span class="f">+ Sheol is the place of the dead.</span> and Abaddon are before Yahweh—</p>
+<p class="q"><span id="11" class="v">11 </span>Sheol<span class="f">+</span> and Abaddon are before Yahweh—</p>
 <p class="q2">how much more then the hearts of the children of men!</p>
 <p class="q"><span id="12" class="v">12 </span>A scoffer doesn’t love to be reproved;</p>
 <p class="q2">he will not go to the wise.</p>
@@ -931,7 +931,7 @@
 <p class="q"><span id="23" class="v">23 </span>Joy comes to a man with the reply of his mouth.</p>
 <p class="q2">How good is a word at the right time!</p>
 <p class="q"><span id="24" class="v">24 </span>The path of life leads upward for the wise,</p>
-<p class="q2">to keep him from going downward to Sheol.<span class="f">+ Sheol is the place of the dead.</span></p>
+<p class="q2">to keep him from going downward to Sheol.<span class="f">+</span></p>
 <p class="q"><span id="25" class="v">25 </span>Yahweh will uproot the house of the proud,</p>
 <p class="q2">but he will keep the widow’s borders intact.</p>
 <p class="q"><span id="26" class="v">26 </span>Yahweh detests the thoughts of the wicked,</p>
@@ -1409,7 +1409,7 @@
 <p class="q"><span id="13" class="v">13 </span>Don’t withhold correction from a child.</p>
 <p class="q2">If you punish him with the rod, he will not die.</p>
 <p class="q"><span id="14" class="v">14 </span>Punish him with the rod,</p>
-<p class="q2">and save his soul from Sheol.<span class="f">+ Sheol is the place of the dead.</span></p>
+<p class="q2">and save his soul from Sheol.<span class="f">+</span></p>
 <p class="b"></p>
 <p class="q"><span id="15" class="v">15 </span>My son, if your heart is wise,</p>
 <p class="q2">then my heart will be glad, even mine:</p>
@@ -1703,7 +1703,7 @@
 <p class="q2">He who looks after his master shall be honored.</p>
 <p class="q"><span id="19" class="v">19 </span>Like water reflects a face,</p>
 <p class="q2">so a man’s heart reflects the man.</p>
-<p class="q"><span id="20" class="v">20 </span>Sheol<span class="f">+ Sheol is the place of the dead.</span> and Abaddon are never satisfied;</p>
+<p class="q"><span id="20" class="v">20 </span>Sheol<span class="f">+</span> and Abaddon are never satisfied;</p>
 <p class="q2">and a man’s eyes are never satisfied.</p>
 <p class="q"><span id="21" class="v">21 </span>The crucible is for silver,</p>
 <p class="q2">and the furnace for gold;</p>
@@ -1881,7 +1881,7 @@
 <p class="b"></p>
 <p class="q">“There are three things that are never satisfied;</p>
 <p class="q2">four that don’t say, ‘Enough:’</p>
-<p class="q2"><span id="16" class="v">16 </span>Sheol,<span class="f">+ Sheol is the place of the dead.</span></p>
+<p class="q2"><span id="16" class="v">16 </span>Sheol,<span class="f">+</span></p>
 <p class="q2">the barren womb;</p>
 <p class="q2">the earth that is not satisfied with water;</p>
 <p class="q2">and the fire that doesn’t say, ‘Enough.’</p>
@@ -1956,7 +1956,7 @@
 <p class="q"><span id="9" class="v">9 </span>Open your mouth, judge righteously,</p>
 <p class="q2">and serve justice to the poor and needy.”</p>
 <p class="b"></p>
-<p class="q"><span id="10" class="v">10 </span><span class="f">+ Proverbs 31:10-31 form an acrostic, with each verse starting with each letter of the Hebrew alphabet, in order.</span>Who can find a worthy woman?</p>
+<p class="q"><span id="10" class="v">10 </span><span class="f">+</span>Who can find a worthy woman?</p>
 <p class="q2">For her price is far above rubies.</p>
 <p class="q"><span id="11" class="v">11 </span>The heart of her husband trusts in her.</p>
 <p class="q2">He shall have no lack of gain.</p>
