--- a/UnitTestCSS1/www/html/025LAM.html
+++ b/UnitTestCSS1/www/html/025LAM.html
@@ -49,7 +49,7 @@
 <p class="b"></p>
 <p class="q"><span id="5" class="v">5 </span>Her adversaries have become the head.</p>
 <p class="q2">Her enemies prosper;</p>
-<p class="q">for Yahweh<span class="f">+ “Yahweh” is God’s proper Name, sometimes rendered “LORD” (all caps) in other translations.</span> has afflicted her for the multitude of her transgressions.</p>
+<p class="q">for Yahweh<span class="f">+</span> has afflicted her for the multitude of her transgressions.</p>
 <p class="q2">Her young children have gone into captivity before the adversary.</p>
 <p class="b"></p>
 <p class="q"><span id="6" class="v">6 </span>All majesty has departed from the daughter of Zion.</p>
@@ -101,7 +101,7 @@
 <p class="q2">They are knit together.</p>
 <p class="q2">They have come up on my neck.</p>
 <p class="q2">He made my strength fail.</p>
-<p class="q">The Lord<span class="f">+ The word translated “Lord” is “Adonai.”</span> has delivered me into their hands,</p>
+<p class="q">The Lord<span class="f">+</span> has delivered me into their hands,</p>
 <p class="q2">against whom I am not able to stand.</p>
 <p class="b"></p>
 <p class="q"><span id="15" class="v">15 </span>“The Lord has set at nothing all my mighty men within me.</p>
@@ -360,7 +360,7 @@
 <p class="b"></p>
 <p class="q"><span id="40" class="v">40 </span>Let us search and try our ways,</p>
 <p class="q2">and turn again to Yahweh.</p>
-<p class="q"><span id="41" class="v">41 </span>Let us lift up our heart with our hands to God<span class="f">+ The Hebrew word rendered “God” is “אֱלֹהִ֑ים” (Elohim).</span> in the heavens.</p>
+<p class="q"><span id="41" class="v">41 </span>Let us lift up our heart with our hands to God<span class="f">+</span> in the heavens.</p>
 <p class="q2"><span id="42" class="v">42 </span>“We have transgressed and have rebelled.</p>
 <p class="q2">You have not pardoned.</p>
 <p class="b"></p>
