--- a/UnitTestCSS1/www/html/028HOS.html
+++ b/UnitTestCSS1/www/html/028HOS.html
@@ -19,17 +19,17 @@
 <p class="mt2">The Book of</p>
 <p class="mt">Hosea</p>
 <p id="1" class="c">1</p>
-<p class="p"><span id="1" class="v">1 </span>Yahweh’s<span class="f">+ “Yahweh” is God’s proper Name, sometimes rendered “LORD” (all caps) in other translations.</span> word that came to Hosea the son of Beeri, in the days of Uzziah, Jotham, Ahaz, and Hezekiah, kings of Judah, and in the days of Jeroboam the son of Joash, king of Israel. <span id="2" class="v">2 </span>When Yahweh spoke at first by Hosea, Yahweh said to Hosea, “Go, take for yourself a wife of prostitution and children of unfaithfulness; for the land commits great adultery, forsaking Yahweh.”</p>
+<p class="p"><span id="1" class="v">1 </span>Yahweh’s<span class="f">+</span> word that came to Hosea the son of Beeri, in the days of Uzziah, Jotham, Ahaz, and Hezekiah, kings of Judah, and in the days of Jeroboam the son of Joash, king of Israel. <span id="2" class="v">2 </span>When Yahweh spoke at first by Hosea, Yahweh said to Hosea, “Go, take for yourself a wife of prostitution and children of unfaithfulness; for the land commits great adultery, forsaking Yahweh.”</p>
 <p class="p"><span id="3" class="v">3 </span>So he went and took Gomer the daughter of Diblaim; and she conceived, and bore him a son.</p>
 <p class="p"><span id="4" class="v">4 </span>Yahweh said to him, “Call his name Jezreel; for yet a little while, and I will avenge the blood of Jezreel on the house of Jehu, and will cause the kingdom of the house of Israel to cease. <span id="5" class="v">5 </span>It will happen in that day that I will break the bow of Israel in the valley of Jezreel.”</p>
 <p class="p"><span id="6" class="v">6 </span>She conceived again, and bore a daughter.</p>
-<p class="p">Then he said to him, “Call her name Lo-Ruhamah<span class="f">+ Lo-Ruhamah means “not loved”.</span>; for I will no longer have mercy on the house of Israel, that I should in any way pardon them.
-    <span id="7" class="v">7 </span>But I will have mercy on the house of Judah, and will save them by Yahweh their God,<span class="f">+ The Hebrew word rendered “God” is “אֱלֹהִ֑ים” (Elohim).</span> and will not save them by bow, sword, battle, horses, or horsemen.”</p>
+<p class="p">Then he said to him, “Call her name Lo-Ruhamah<span class="f">+</span>; for I will no longer have mercy on the house of Israel, that I should in any way pardon them.
+    <span id="7" class="v">7 </span>But I will have mercy on the house of Judah, and will save them by Yahweh their God,<span class="f">+</span> and will not save them by bow, sword, battle, horses, or horsemen.”</p>
 <p class="p"><span id="8" class="v">8 </span>Now when she had weaned Lo-Ruhamah, she conceived, and bore a son.</p>
-<p class="p"><span id="9" class="v">9 </span>He said, “Call his name Lo-Ammi<span class="f">+ Lo-Ammi means “not my people”.</span>; for you are not my people, and I will not be yours. <span id="10" class="v">10 </span>Yet the number of the children of Israel will be as the sand of the sea, which can’t be measured or counted; and it will come to pass that, in the place where it was said to them, ‘You are not my people,’ they will be called ‘sons of the living God.’ <span id="11" class="v">11 </span>The children of Judah and the children of Israel will be gathered together, and they will appoint themselves one head, and will go up from the land; for great will be the day of Jezreel.</p>
+<p class="p"><span id="9" class="v">9 </span>He said, “Call his name Lo-Ammi<span class="f">+</span>; for you are not my people, and I will not be yours. <span id="10" class="v">10 </span>Yet the number of the children of Israel will be as the sand of the sea, which can’t be measured or counted; and it will come to pass that, in the place where it was said to them, ‘You are not my people,’ they will be called ‘sons of the living God.’ <span id="11" class="v">11 </span>The children of Judah and the children of Israel will be gathered together, and they will appoint themselves one head, and will go up from the land; for great will be the day of Jezreel.</p>
 <p id="2" class="c">2</p>
-<p class="p"><span id="1" class="v">1 </span>“Say to your brothers, ‘My people!’<span class="f">+ ‘Ammi’ in Hebrew</span></p>
-<p class="q2">and to your sisters, ‘My loved one!’<span class="f">+ ‘Ruhamah’ in Hebrew</span></p>
+<p class="p"><span id="1" class="v">1 </span>“Say to your brothers, ‘My people!’<span class="f">+</span></p>
+<p class="q2">and to your sisters, ‘My loved one!’<span class="f">+</span></p>
 <p class="q"><span id="2" class="v">2 </span>Contend with your mother!</p>
 <p class="q2">Contend, for she is not my wife,</p>
 <p class="q2">neither am I her husband;</p>
@@ -48,7 +48,7 @@
 <p class="q2">who give me my bread and my water,</p>
 <p class="q2">my wool and my flax,</p>
 <p class="q2">my oil and my drink.’</p>
-<p class="q"><span id="6" class="v">6 </span>Therefore behold,<span class="f">+ “Behold”, from “הִנֵּה”, means look at, take notice, observe, see, or gaze at. It is often used as an interjection.</span> I will hedge up your way with thorns,</p>
+<p class="q"><span id="6" class="v">6 </span>Therefore behold,<span class="f">+</span> I will hedge up your way with thorns,</p>
 <p class="q2">and I will build a wall against her,</p>
 <p class="q2">that she can’t find her way.</p>
 <p class="q"><span id="7" class="v">7 </span>She will follow after her lovers,</p>
@@ -108,7 +108,7 @@
 <p class="q2">and they will say, ‘My God!’”</p>
 <p id="3" class="c">3</p>
 <p class="p"><span id="1" class="v">1 </span>Yahweh said to me, “Go again, love a woman loved by another, and an adulteress, even as Yahweh loves the children of Israel, though they turn to other gods, and love cakes of raisins.”</p>
-<p class="p"><span id="2" class="v">2 </span>So I bought her for myself for fifteen pieces of silver and a homer<span class="f">+ 1 homer is about 220 liters or 6 bushels</span> and a half of barley. <span id="3" class="v">3 </span>I said to her, “You shall stay with me many days. You shall not play the prostitute, and you shall not be with any other man. I will also be so toward you.”</p>
+<p class="p"><span id="2" class="v">2 </span>So I bought her for myself for fifteen pieces of silver and a homer<span class="f">+</span> and a half of barley. <span id="3" class="v">3 </span>I said to her, “You shall stay with me many days. You shall not play the prostitute, and you shall not be with any other man. I will also be so toward you.”</p>
 <p class="p"><span id="4" class="v">4 </span>For the children of Israel shall live many days without king, and without prince, and without sacrifice, and without sacred stone, and without ephod or idols. <span id="5" class="v">5 </span>Afterward the children of Israel shall return, and seek Yahweh their God, and David their king, and shall come with trembling to Yahweh and to his blessings in the last days.</p>
 <p id="4" class="c">4</p>
 <p class="p"><span id="1" class="v">1 </span>Hear Yahweh’s word, you children of Israel;</p>
@@ -570,7 +570,7 @@
 <p class="q2">and by a prophet he was preserved.</p>
 <p class="q"><span id="14" class="v">14 </span>Ephraim has bitterly provoked anger.</p>
 <p class="q2">Therefore his blood will be left on him,</p>
-<p class="q2">and his Lord<span class="f">+ The word translated “Lord” is “Adonai.”</span> will repay his contempt.</p>
+<p class="q2">and his Lord<span class="f">+</span> will repay his contempt.</p>
 <p id="13" class="c">13</p>
 <p class="p"><span id="1" class="v">1 </span>When Ephraim spoke, there was trembling.</p>
 <p class="q2">He exalted himself in Israel,</p>
@@ -610,7 +610,7 @@
 <p class="q"><span id="13" class="v">13 </span>The sorrows of a travailing woman will come on him.</p>
 <p class="q2">He is an unwise son;</p>
 <p class="q2">for when it is time, he doesn’t come to the opening of the womb.</p>
-<p class="q"><span id="14" class="v">14 </span>I will ransom them from the power of Sheol.<span class="f">+ Sheol is the place of the dead.</span></p>
+<p class="q"><span id="14" class="v">14 </span>I will ransom them from the power of Sheol.<span class="f">+</span></p>
 <p class="q2">I will redeem them from death!</p>
 <p class="q2">Death, where are your plagues?</p>
 <p class="q2">Sheol, where is your destruction?</p>
