--- a/UnitTestCSS1/www/html/029JOL.html
+++ b/UnitTestCSS1/www/html/029JOL.html
@@ -19,7 +19,7 @@
 <p class="mt2">The Book of</p>
 <p class="mt">Joel</p>
 <p id="1" class="c">1</p>
-<p class="p"><span id="1" class="v">1 </span>Yahweh’s<span class="f">+ “Yahweh” is God’s proper Name, sometimes rendered “LORD” (all caps) in other translations.</span> word that came to Joel, the son of Pethuel.</p>
+<p class="p"><span id="1" class="v">1 </span>Yahweh’s<span class="f">+</span> word that came to Joel, the son of Pethuel.</p>
 <p class="q"><span id="2" class="v">2 </span>Hear this, you elders,</p>
 <p class="q2">And listen, all you inhabitants of the land.</p>
 <p class="q">Has this ever happened in your days,</p>
@@ -56,7 +56,7 @@
 <p class="q2">for joy has withered away from the sons of men.</p>
 <p class="q"><span id="13" class="v">13 </span>Put on sackcloth and mourn, you priests!</p>
 <p class="q2">Wail, you ministers of the altar.</p>
-<p class="q">Come, lie all night in sackcloth, you ministers of my God,<span class="f">+ The Hebrew word rendered “God” is “אֱלֹהִ֑ים” (Elohim).</span></p>
+<p class="q">Come, lie all night in sackcloth, you ministers of my God,<span class="f">+</span></p>
 <p class="q2">for the meal offering and the drink offering are withheld from your God’s house.</p>
 <p class="q"><span id="14" class="v">14 </span>Sanctify a fast.</p>
 <p class="q2">Call a solemn assembly.</p>
@@ -154,7 +154,7 @@
 <p class="q"><span id="18" class="v">18 </span>Then Yahweh was jealous for his land,</p>
 <p class="q2">And had pity on his people.</p>
 <p class="q"><span id="19" class="v">19 </span>Yahweh answered his people,</p>
-<p class="q2">“Behold,<span class="f">+ “Behold”, from “הִנֵּה”, means look at, take notice, observe, see, or gaze at. It is often used as an interjection.</span> I will send you grain, new wine, and oil,</p>
+<p class="q2">“Behold,<span class="f">+</span> I will send you grain, new wine, and oil,</p>
 <p class="q2">and you will be satisfied with them;</p>
 <p class="q2">and I will no more make you a reproach among the nations.</p>
 <p class="q"><span id="20" class="v">20 </span>But I will remove the northern army far away from you,</p>
