Changed Table of Contents View to follow showView/hideView pattern.

--- a/BibleAppNW/index.html
+++ b/BibleAppNW/index.html
@@ -19,5 +19,10 @@
 	</script>
   </head>
   <body onload="onBodyLoad()">
+  	<div id="statusRoot"></div>
+  	<div id="tocRoot"></div>
+  	<div id="codexRoot"></div>
+  	<div id="searchRoot"></div>
+  	<div id="historyRoot"></div>
   </body>
 </html>
